; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_emalloc.c_oreallocarrayxz.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_emalloc.c_oreallocarrayxz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MUL_NO_OVERFLOW = common dso_local global i64 0, align 8
@SIZE_MAX = common dso_local global i64 0, align 8
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"fatal allocation size overflow\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @oreallocarrayxz(i8* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* @MUL_NO_OVERFLOW, align 8
  %11 = icmp uge i64 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %4
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* @MUL_NO_OVERFLOW, align 8
  %15 = icmp uge i64 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %12, %4
  %17 = load i64, i64* %6, align 8
  %18 = icmp ugt i64 %17, 0
  br i1 %18, label %19, label %29

19:                                               ; preds = %16
  %20 = load i64, i64* @SIZE_MAX, align 8
  %21 = load i64, i64* %6, align 8
  %22 = udiv i64 %20, %21
  %23 = load i64, i64* %7, align 8
  %24 = icmp ult i64 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i32, i32* @LOG_ERR, align 4
  %27 = call i32 (i32, i8*, ...) @msyslog(i32 %26, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %28 = call i32 @exit(i32 1) #3
  unreachable

29:                                               ; preds = %19, %16, %12
  %30 = load i8*, i8** %5, align 8
  %31 = load i64, i64* %8, align 8
  %32 = load i64, i64* %7, align 8
  %33 = load i64, i64* %6, align 8
  %34 = mul i64 %32, %33
  %35 = add i64 %31, %34
  %36 = load i32, i32* @TRUE, align 4
  %37 = call i8* (i8*, i64, i32, i32, ...) @ereallocz(i8* %30, i64 %35, i32 0, i32 %36)
  ret i8* %37
}

declare dso_local i32 @msyslog(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i8* @ereallocz(i8*, i64, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
